--- a/app/src/main/res/layout/activity_add_student.xml
+++ b/app/src/main/res/layout/activity_add_student.xml
@@ -16,7 +16,7 @@
         android:backgroundTint="#3F51B5"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name"
+        android:hint="@string/name"
         app:layout_constraintBottom_toBottomOf="@+id/editText_student_last_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.363"
@@ -33,7 +33,7 @@
         android:backgroundTint="#3F51B5"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Last Name"
+        android:hint="Last Name"
         android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="@+id/editText_student_age"
         app:layout_constraintEnd_toEndOf="parent"
@@ -49,7 +49,7 @@
         android:backgroundTint="#3F51B5"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Age"
+        android:hint="Age"
         app:layout_constraintBottom_toBottomOf="@+id/editText_student_phone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.363"
@@ -64,7 +64,7 @@
         android:backgroundTint="#3F51B5"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Address"
+        android:hint="Address"
         app:layout_constraintBottom_toBottomOf="@+id/editText_student_class"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.363"
@@ -79,7 +79,7 @@
         android:backgroundTint="#3F51B5"
         android:ems="10"
         android:inputType="phone"
-        android:text="Phone"
+        android:hint="Phone"
         app:layout_constraintBottom_toBottomOf="@+id/editText_student_email"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.363"
@@ -94,7 +94,7 @@
         android:backgroundTint="#3F51B5"
         android:ems="10"
         android:inputType="textEmailAddress"
-        android:text="Email"
+        android:hint="Email"
         app:layout_constraintBottom_toBottomOf="@+id/editText_student_address"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.363"
@@ -107,7 +107,7 @@
         android:layout_height="49dp"
         android:layout_marginBottom="16dp"
         android:onClick="click_student_save_student"
-        android:text="SAVE STUDENT"
+        android:hint="SAVE STUDENT"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.372"
@@ -135,7 +135,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:onClick="click_student_class"
-        android:text="Class"
+        android:hint="Class"
         app:layout_constraintBottom_toBottomOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.363"
