--- a/app/src/main/res/layout/activity_contact_list_student.xml
+++ b/app/src/main/res/layout/activity_contact_list_student.xml
@@ -13,49 +13,110 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview_list"
-        android:layout_width="385dp"
+        android:layout_width="0dp"
         android:layout_height="433dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="6dp"
+        app:layout_constraintBottom_toTopOf="@+id/button_add_student"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.384"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.624" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/button_add_student"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="464dp"
+        android:layout_marginTop="6dp"
         android:onClick="click_add_student"
         android:text="Add student"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.444"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/recyclerview_list" />
+        app:layout_constraintTop_toBottomOf="@+id/recyclerview_list" />
 
     <EditText
         android:id="@+id/editText_search_student"
-        android:layout_width="283dp"
-        android:layout_height="70dp"
+        android:layout_width="238dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="40dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name"
-        app:layout_constraintBottom_toTopOf="@+id/recyclerview_list"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:hint="@string/name"
+        app:layout_constraintBottom_toTopOf="@+id/checkBox_age"
+        app:layout_constraintEnd_toStartOf="@+id/button_search_student"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.326" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button_search_student"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="11dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginBottom="47dp"
         android:onClick="click_search_student"
         android:text="Search"
+        app:layout_constraintBottom_toTopOf="@+id/checkBox_Address"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/editText_search_student"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <CheckBox
+        android:id="@+id/checkBox_age"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="40dp"
+        android:text="Age"
+        app:layout_constraintStart_toEndOf="@+id/checkBox_name"
+        app:layout_constraintTop_toBottomOf="@+id/editText_search_student" />
+
+    <CheckBox
+        android:id="@+id/checkBox_class"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="40dp"
+        android:text="Class"
+        app:layout_constraintStart_toEndOf="@+id/checkBox_age"
+        app:layout_constraintTop_toBottomOf="@+id/editText_search_student" />
+
+    <CheckBox
+        android:id="@+id/checkBox_Address"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="40dp"
+        android:text="Address"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/checkBox_class"
+        app:layout_constraintTop_toBottomOf="@+id/editText_search_student" />
+
+    <CheckBox
+        android:id="@+id/checkBox_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="40dp"
+        android:text="Name"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText_search_student" />
+
+    <Button
+        android:id="@+id/button_search_by_key"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="13dp"
+        android:layout_marginBottom="8dp"
+        android:onClick="click_search_by_key_student"
+        android:text="Search by key"
+        app:layout_constraintBottom_toTopOf="@+id/recyclerview_list"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.474"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/checkBox_age" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
