--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -81,8 +81,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
-        android:onClick="click_register"
-        android:text="Forgot password?"
+        android:text=""
         android:textColor="@color/black" />
 
     <TextView
