--- a/app/src/main/res/layout/activity_add_teacher.xml
+++ b/app/src/main/res/layout/activity_add_teacher.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#402196F3"
-    tools:context=".AddTeacherActivity">
+    tools:context=".writeUser.AddTeacherActivity">
 
     <ImageView
         android:id="@+id/imageView_teacher_imag"
