--- a/app/src/main/res/layout/activity_contact_list_teacher.xml
+++ b/app/src/main/res/layout/activity_contact_list_teacher.xml
@@ -9,7 +9,7 @@
     android:paddingTop="@dimen/cardview_compat_inset_shadow"
     android:paddingRight="16dp"
     android:paddingBottom="16dp"
-    tools:context=".ContactListTeacherActivity">
+    tools:context=".readUser.ContactListTeacherActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
