--- a/app/src/main/res/layout/activity_admin_contact_list_student.xml
+++ b/app/src/main/res/layout/activity_admin_contact_list_student.xml
@@ -9,30 +9,33 @@
     android:paddingTop="@dimen/cardview_compat_inset_shadow"
     android:paddingRight="16dp"
     android:paddingBottom="16dp"
-    tools:context=".readUser.ContactListTeacherActivity">
+    tools:context=".readUser.admin.AdminContactListStudentActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/recyclerview_admin_student"
         android:layout_width="0dp"
         android:layout_height="433dp"
-        android:layout_marginBottom="6dp"
-        app:layout_constraintBottom_toTopOf="@+id/button_add_teacher"
+        android:layout_marginBottom="48dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button_add_teacher"
+        android:id="@+id/button_add_student"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
-        android:onClick="click_add_teacher"
-        android:text="Add Teacher"
+        android:layout_marginTop="1dp"
+        android:layout_marginBottom="14dp"
+        android:onClick="click_add_student"
+        android:text="Add student"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.455"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />
+        app:layout_constraintTop_toBottomOf="@+id/recyclerview_admin_student" />
 
     <EditText
-        android:id="@+id/editText_search_teacher"
+        android:id="@+id/editText_search_student"
         android:layout_width="238dp"
         android:layout_height="55dp"
         android:layout_marginStart="8dp"
@@ -43,87 +46,77 @@
         android:inputType="textPersonName"
         android:hint="@string/name"
         app:layout_constraintBottom_toTopOf="@+id/checkBox_age"
-        app:layout_constraintEnd_toStartOf="@+id/button_search_teacher"
+        app:layout_constraintEnd_toStartOf="@+id/button_search_student"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button_search_teacher"
+        android:id="@+id/button_search_student"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="12dp"
         android:layout_marginBottom="47dp"
-        android:onClick="click_search_teacher"
+        android:onClick="click_search_student"
         android:text="Search"
-        app:layout_constraintBottom_toTopOf="@+id/checkBox_Address"
+        app:layout_constraintBottom_toTopOf="@+id/checkBox_id"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/editText_search_teacher"
+        app:layout_constraintStart_toEndOf="@+id/editText_search_student"
         app:layout_constraintTop_toTopOf="parent" />
 
     <CheckBox
         android:id="@+id/checkBox_age"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="40dp"
-        android:layout_marginEnd="5dp"
         android:text="Age"
-        app:layout_constraintEnd_toStartOf="@+id/checkBox_profession"
         app:layout_constraintStart_toEndOf="@+id/checkBox_name"
-        app:layout_constraintTop_toBottomOf="@+id/editText_search_teacher" />
+        app:layout_constraintTop_toBottomOf="@+id/editText_search_student" />
 
     <CheckBox
-        android:id="@+id/checkBox_profession"
+        android:id="@+id/checkBox_class"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="40dp"
-        android:layout_marginEnd="5dp"
-        android:text="profession"
-        app:layout_constraintEnd_toStartOf="@+id/checkBox_Address"
+        android:text="Class"
         app:layout_constraintStart_toEndOf="@+id/checkBox_age"
-        app:layout_constraintTop_toBottomOf="@+id/editText_search_teacher" />
+        app:layout_constraintTop_toBottomOf="@+id/editText_search_student" />
 
     <CheckBox
-        android:id="@+id/checkBox_Address"
+        android:id="@+id/checkBox_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="40dp"
-        android:layout_marginEnd="5dp"
-        android:text="Address"
+        android:text="Identity card"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/checkBox_profession"
-        app:layout_constraintTop_toBottomOf="@+id/editText_search_teacher" />
+        app:layout_constraintStart_toEndOf="@+id/checkBox_class"
+        app:layout_constraintTop_toBottomOf="@+id/editText_search_student" />
 
     <CheckBox
         android:id="@+id/checkBox_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
+        android:layout_marginStart="12dp"
         android:layout_marginTop="40dp"
-        android:layout_marginEnd="5dp"
-        android:layout_marginBottom="69dp"
         android:text="Name"
-        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
-        app:layout_constraintEnd_toStartOf="@+id/checkBox_age"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText_search_teacher"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/editText_search_student" />
 
     <Button
         android:id="@+id/button_search_by_key"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="13dp"
-        android:layout_marginBottom="8dp"
-        android:onClick="click_search_by_key_teacher"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="10dp"
+        android:onClick="click_search_by_key_student"
         android:text="Search by key"
-        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
+        app:layout_constraintBottom_toTopOf="@+id/recyclerview_admin_student"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.474"
         app:layout_constraintStart_toStartOf="parent"
