--- a/app/src/main/res/layout/activity_admin_login.xml
+++ b/app/src/main/res/layout/activity_admin_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    tools:context=".LoginActivity">
+    tools:context=".login.ClientLoginActivity">
 
     <TextView
         android:id="@+id/signin"
@@ -17,7 +17,7 @@
         android:layout_marginBottom="50dp"
         android:fontFamily="cursive"
         android:gravity="center"
-        android:text="@string/sign_in"
+        android:text="Admin Sign In"
         android:textColor="@color/black"
         android:textSize="96sp"
         android:textStyle="bold" />
@@ -32,7 +32,7 @@
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
         android:background="#30ffffff"
-        android:hint="@string/username"
+        android:hint="@string/phone_number"
         android:padding="20dp"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
@@ -49,7 +49,7 @@
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
         android:background="#30ffffff"
-        android:hint="@string/password"
+        android:hint="@string/authenticate_password"
         android:padding="20dp"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
@@ -63,13 +63,13 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/password"
         android:layout_centerHorizontal="true"
-        android:onClick="click_login"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
         android:backgroundTint="@color/design_default_color_secondary"
-        android:text="LOGIN" />
+        android:onClick="click_login"
+        android:text="SEND" />
 
     <TextView
         android:id="@+id/forgotpass"
@@ -84,40 +84,22 @@
         android:text=""
         android:textColor="@color/black" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/others"
-        android:layout_above="@id/socialicons"
-        android:text="or sign in with"
-        android:layout_centerHorizontal="true"/>
-
-
-    <LinearLayout
+    <Button
+        android:id="@+id/btnverifyOTP"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/socialicons"
-        android:layout_alignParentBottom="true"
-        android:gravity="center">
+        android:layout_below="@+id/click_login"
+        android:layout_marginBottom="20dp"
+        android:text="Verify OTP"
+        android:textSize="20dp"
+        android:enabled="false"/>
+    <ProgressBar
+        android:id="@+id/bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/btnverifyOTP"
+        android:layout_centerHorizontal="true"
+        android:visibility="invisible"/>
 
-
-        <ImageView
-            android:id="@+id/google_button"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_margin="20dp"
-            android:src="@drawable/google" />
-        <ImageView
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_margin="20dp"
-            android:src="@drawable/fb"/>
-        <ImageView
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_margin="20dp"
-            android:src="@drawable/twitter"/>
-
-    </LinearLayout>
 
 </RelativeLayout>
