--- a/app/src/main/res/layout/activity_client_contact_list_teacher.xml
+++ b/app/src/main/res/layout/activity_client_contact_list_teacher.xml
@@ -9,30 +9,21 @@
     android:paddingTop="@dimen/cardview_compat_inset_shadow"
     android:paddingRight="16dp"
     android:paddingBottom="16dp"
-    tools:context=".readUser.ContactListStudentActivity">
+    tools:context=".readUser.client.ClientContactListTeacherActivity">
+
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview_list"
+        android:id="@+id/recyclerview_client_teacher"
         android:layout_width="0dp"
         android:layout_height="433dp"
-        android:layout_marginBottom="6dp"
-        app:layout_constraintBottom_toTopOf="@+id/button_add_student"
+        android:layout_marginBottom="46dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.687"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <Button
-        android:id="@+id/button_add_student"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
-        android:onClick="click_add_student"
-        android:text="Add student"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/recyclerview_list" />
-
     <EditText
-        android:id="@+id/editText_search_student"
+        android:id="@+id/editText_search_teacher"
         android:layout_width="238dp"
         android:layout_height="55dp"
         android:layout_marginStart="8dp"
@@ -43,67 +34,77 @@
         android:inputType="textPersonName"
         android:hint="@string/name"
         app:layout_constraintBottom_toTopOf="@+id/checkBox_age"
-        app:layout_constraintEnd_toStartOf="@+id/button_search_student"
+        app:layout_constraintEnd_toStartOf="@+id/button_search_teacher"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button_search_student"
+        android:id="@+id/button_search_teacher"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="12dp"
         android:layout_marginBottom="47dp"
-        android:onClick="click_search_student"
+        android:onClick="click_search_teacher"
         android:text="Search"
-        app:layout_constraintBottom_toTopOf="@+id/checkBox_Address"
+        app:layout_constraintBottom_toTopOf="@+id/checkBox_id"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/editText_search_student"
+        app:layout_constraintStart_toEndOf="@+id/editText_search_teacher"
         app:layout_constraintTop_toTopOf="parent" />
 
     <CheckBox
         android:id="@+id/checkBox_age"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="5dp"
         android:layout_marginTop="40dp"
+        android:layout_marginEnd="5dp"
         android:text="Age"
+        app:layout_constraintEnd_toStartOf="@+id/checkBox_profession"
         app:layout_constraintStart_toEndOf="@+id/checkBox_name"
-        app:layout_constraintTop_toBottomOf="@+id/editText_search_student" />
+        app:layout_constraintTop_toBottomOf="@+id/editText_search_teacher" />
 
     <CheckBox
-        android:id="@+id/checkBox_class"
+        android:id="@+id/checkBox_profession"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="5dp"
         android:layout_marginTop="40dp"
-        android:text="Class"
+        android:layout_marginEnd="5dp"
+        android:text="profession"
+        app:layout_constraintEnd_toStartOf="@+id/checkBox_id"
         app:layout_constraintStart_toEndOf="@+id/checkBox_age"
-        app:layout_constraintTop_toBottomOf="@+id/editText_search_student" />
+        app:layout_constraintTop_toBottomOf="@+id/editText_search_teacher" />
 
     <CheckBox
-        android:id="@+id/checkBox_Address"
+        android:id="@+id/checkBox_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="5dp"
         android:layout_marginTop="40dp"
-        android:text="Address"
+        android:layout_marginEnd="5dp"
+        android:text="Identity card"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/checkBox_class"
-        app:layout_constraintTop_toBottomOf="@+id/editText_search_student" />
+        app:layout_constraintStart_toEndOf="@+id/checkBox_profession"
+        app:layout_constraintTop_toBottomOf="@+id/editText_search_teacher" />
 
     <CheckBox
         android:id="@+id/checkBox_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
+        android:layout_marginStart="5dp"
         android:layout_marginTop="40dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="69dp"
         android:text="Name"
+        app:layout_constraintBottom_toTopOf="@+id/recyclerview_client_teacher"
+        app:layout_constraintEnd_toStartOf="@+id/checkBox_age"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText_search_student" />
+        app:layout_constraintTop_toBottomOf="@+id/editText_search_teacher"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/button_search_by_key"
@@ -111,9 +112,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="13dp"
         android:layout_marginBottom="8dp"
-        android:onClick="click_search_by_key_student"
+        android:onClick="click_search_by_key_teacher"
         android:text="Search by key"
-        app:layout_constraintBottom_toTopOf="@+id/recyclerview_list"
+        app:layout_constraintBottom_toTopOf="@+id/recyclerview_client_teacher"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.474"
         app:layout_constraintStart_toStartOf="parent"
