--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,188 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main_screen"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_main"
-    android:paddingLeft="16dp"
-    android:paddingTop="@dimen/cardview_compat_inset_shadow"
-    android:paddingRight="16dp"
-    android:paddingBottom="16dp"
+    android:background="@drawable/background_menu"
     tools:context=".MainActivity">
 
-    <ImageButton
-        android:id="@+id/imageButton_timetable"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_marginTop="124dp"
-        android:onClick="click_timetable"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        app:srcCompat="@drawable/calendar"
-        tools:ignore="SpeakableTextPresentCheck" />
+    <TextView
+        android:id="@+id/textView_neve_golan"
+        android:layout_width="380dp"
+        android:layout_height="358dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="50dp"
+        android:fontFamily="cursive"
+        android:gravity="center"
+        android:text="@string/neve_golan_main"
+        android:textColor="@color/white"
+        android:textSize="100sp"
+        android:textStyle="bold" />
 
     <ImageView
-        android:id="@+id/imageView_main_concern"
-        android:layout_width="328dp"
-        android:layout_height="86dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/second_main_picture" />
+        android:id="@+id/imageView_learning"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/textView_neve_golan"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="10dp"
+        app:srcCompat="@drawable/img" />
 
     <Button
-        android:id="@+id/button_logout"
-        android:layout_width="wrap_content"
+        android:id="@+id/button_client_sign_in"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="112dp"
-        android:background="#3F51B5"
-        android:backgroundTint="#3F51B5"
-        android:onClick="click_logout"
-        android:text="logout"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView_main_concern"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.474"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_below="@id/imageView_learning"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="10dp"
+        android:backgroundTint="@color/teal_200"
+        android:fontFamily="serif"
+        android:includeFontPadding="false"
+        android:onClick="click_client_sign_in"
+        android:text="@string/client_sign_in"
+        android:textColor="@android:color/black"
+        android:textColorHighlight="#E91E63"
+        android:textSize="16sp"
+        android:textStyle="bold" />
 
-    <ImageView
-        android:id="@+id/imageView_teacher"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_marginTop="29dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="172dp"
-        android:onClick="click_teachers"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView_main_concern"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.895"
-        app:layout_constraintStart_toEndOf="@+id/imageView_student"
-        app:layout_constraintTop_toBottomOf="@+id/imageView_private"
-        app:srcCompat="@drawable/teacher"
-        tools:ignore="SpeakableTextPresentCheck" />
-
-    <ImageView
-        android:id="@+id/imageView_student"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="51dp"
-        android:layout_marginBottom="172dp"
-        android:onClick="click_student"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView_main_concern"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton_timetable"
-        app:srcCompat="@drawable/student"
-        tools:ignore="SpeakableTextPresentCheck" />
-
-    <ImageView
-        android:id="@+id/imageView_private"
-        android:layout_width="182dp"
-        android:layout_height="166dp"
-        android:layout_marginStart="73dp"
-        android:layout_marginTop="100dp"
-        android:layout_marginEnd="4dp"
-        android:onClick="click_private"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageButton_timetable"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        app:srcCompat="@drawable/personal"
-        tools:ignore="SpeakableTextPresentCheck" />
-
-    <TextView
-        android:id="@+id/textView_student"
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/button_admin_sign_in"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginBottom="124dp"
-        android:fontFamily="sans-serif-black"
-        android:text="Student"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView_student"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_below="@id/button_client_sign_in"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="10dp"
+        android:backgroundTint="@color/design_default_color_secondary"
+        android:fontFamily="serif"
+        android:includeFontPadding="false"
+        android:onClick="click_admin_sign_in"
+        android:text="@string/admin_sign_in"
+        android:textColor="@android:color/black"
+        android:textSize="16sp"
+        android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/textView_teachers"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="122dp"
-        android:layout_marginEnd="36dp"
-        android:layout_marginBottom="124dp"
-        android:fontFamily="sans-serif-black"
-        android:text="Teachers"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView_teacher"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView_student" />
 
-    <TextView
-        android:id="@+id/textView_timetable"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="34dp"
-        android:layout_marginBottom="120dp"
-        android:fontFamily="sans-serif-black"
-        android:text="Timetable"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageButton_timetable"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView_Name"
-        app:layout_constraintVertical_bias="1.0" />
 
-    <TextView
-        android:id="@+id/textView_private"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="131dp"
-        android:layout_marginTop="34dp"
-        android:layout_marginBottom="129dp"
-        android:fontFamily="sans-serif-black"
-        android:text="Private"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView_private"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/textView_timetable"
-        app:layout_constraintTop_toBottomOf="@+id/textView_email_"
-        app:layout_constraintVertical_bias="0.375" />
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="377dp"
-        android:layout_height="127dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/neve_golan" />
-
-    <TextView
-        android:id="@+id/textView_Name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="32dp"
-        android:text="Name"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/imageButton_timetable"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <TextView
-        android:id="@+id/textView_email_"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="143dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="100dp"
-        android:layout_marginBottom="207dp"
-        android:text="Email"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView_private"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView_Name"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
