--- a/app/src/main/res/layout/activity_update_student.xml
+++ b/app/src/main/res/layout/activity_update_student.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#402196F3"
-    tools:context=".writeUser.AddStudentActivity">
+    tools:context=".updateRemoveUser.UpdateRemoveStudent">
+
 
     <EditText
         android:id="@+id/editText_student_name"
@@ -15,8 +16,8 @@
         android:layout_marginBottom="65dp"
         android:backgroundTint="#3F51B5"
         android:ems="10"
-        android:inputType="textPersonName"
         android:hint="@string/name"
+        android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="@+id/editText_student_last_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.363"
@@ -32,8 +33,8 @@
         android:layout_marginBottom="64dp"
         android:backgroundTint="#3F51B5"
         android:ems="10"
-        android:inputType="textPersonName"
         android:hint="Last Name"
+        android:inputType="textPersonName"
         android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="@+id/editText_student_age"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,8 +49,8 @@
         android:layout_marginBottom="64dp"
         android:backgroundTint="#3F51B5"
         android:ems="10"
-        android:inputType="textPersonName"
         android:hint="Age"
+        android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="@+id/editText_student_phone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.363"
@@ -106,8 +107,8 @@
         android:layout_width="156dp"
         android:layout_height="49dp"
         android:layout_marginBottom="16dp"
-        android:onClick="click_student_save_student"
-        android:hint="SAVE STUDENT"
+        android:onClick="click_student_Update_student"
+        android:hint="Student Update"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.372"
@@ -141,5 +142,102 @@
         app:layout_constraintHorizontal_bias="0.363"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="TouchTargetSizeCheck" />
+
+    <TextView
+        android:id="@+id/textView_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="14dp"
+        android:layout_marginBottom="46dp"
+        android:text="Name"
+        app:layout_constraintBottom_toTopOf="@+id/textView_last"
+        app:layout_constraintEnd_toStartOf="@+id/editText_student_name"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView_last"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="14dp"
+        android:layout_marginBottom="47dp"
+        android:text="Last"
+        app:layout_constraintBottom_toTopOf="@+id/textView_age"
+        app:layout_constraintEnd_toStartOf="@+id/editText_student_last_name"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView_age"
+        android:layout_width="35dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="14dp"
+        android:layout_marginBottom="43dp"
+        android:text="Age"
+        app:layout_constraintBottom_toTopOf="@+id/textView_phone"
+        app:layout_constraintEnd_toStartOf="@+id/editText_student_age"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView_phone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="14dp"
+        android:layout_marginBottom="40dp"
+        android:text="Phone"
+        app:layout_constraintBottom_toTopOf="@+id/textView_email"
+        app:layout_constraintEnd_toStartOf="@+id/editText_student_phone"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView_email"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="14dp"
+        android:layout_marginBottom="50dp"
+        android:text="Email"
+        app:layout_constraintBottom_toTopOf="@+id/textView_id"
+        app:layout_constraintEnd_toStartOf="@+id/editText_student_email"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView_id"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="14dp"
+        android:layout_marginBottom="45dp"
+        android:text="ID"
+        app:layout_constraintBottom_toTopOf="@+id/textView_class"
+        app:layout_constraintEnd_toStartOf="@+id/editText_student_id"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView_class"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="14dp"
+        android:layout_marginBottom="90dp"
+        android:text="Class"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/editText_student_class"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/button_remove_student"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="26dp"
+        android:layout_marginBottom="18dp"
+        android:onClick="student_remove_student"
+        android:text="Remove"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/button_student_update" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
