--- a/app/src/main/res/layout/recycleritem_student.xml
+++ b/app/src/main/res/layout/recycleritem_student.xml
@@ -15,9 +15,11 @@
         android:layout_height="53dp"
         android:layout_marginStart="4dp"
         android:layout_marginTop="12dp"
+        android:onClick="Click_imageView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/student" />
+        app:srcCompat="@drawable/student"
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
         android:id="@+id/textView_student_name"
@@ -38,7 +40,7 @@
         android:layout_marginBottom="25dp"
         android:text="Last Name"
         android:textSize="10sp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView_student_address"
+        app:layout_constraintBottom_toBottomOf="@+id/textView_student_id"
         app:layout_constraintStart_toEndOf="@+id/textView11" />
 
     <TextView
@@ -75,12 +77,12 @@
         app:layout_constraintStart_toEndOf="@+id/textView16" />
 
     <TextView
-        android:id="@+id/textView_student_address"
+        android:id="@+id/textView_student_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginBottom="12dp"
-        android:text="Adress"
+        android:text="identity card"
         android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView14" />
@@ -135,7 +137,7 @@
         android:layout_height="15dp"
         android:layout_marginStart="16dp"
         android:layout_marginBottom="12dp"
-        android:text="Adress"
+        android:text="ID"
         android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView_sdudent" />
@@ -171,7 +173,7 @@
         android:text="Class"
         android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="@+id/divider"
-        app:layout_constraintStart_toEndOf="@+id/textView_student_address" />
+        app:layout_constraintStart_toEndOf="@+id/textView_student_id" />
 
     <TextView
         android:id="@+id/textView18"
