Adding an admin menu

--- a/app/src/main/res/layout/activity_add_student.xml
+++ b/app/src/main/res/layout/activity_add_student.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#402196F3"
-    tools:context=".writeUser.AddStudentActivity">
+    android:background="@drawable/background_main"
+    tools:context=".AddUser.AddStudentActivity">
 
     <EditText
         android:id="@+id/editText_student_name"
