--- a/app/src/main/res/layout/activity_update_teacher.xml
+++ b/app/src/main/res/layout/activity_update_teacher.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#402196F3"
+    android:background="@drawable/background_main"
     tools:context=".updateRemoveUser.UpdateRemoveTeacher">
 
 
     <ImageView
-        android:id="@+id/imageView_teacher_imag"
+        android:id="@+id/imageView_teacher_image"
         android:layout_width="209dp"
         android:layout_height="194dp"
         android:layout_marginBottom="84dp"
@@ -35,7 +35,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.35"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView_teacher_imag"
+        app:layout_constraintTop_toBottomOf="@+id/imageView_teacher_image"
         app:layout_constraintVertical_bias="1.0"
         tools:ignore="TouchTargetSizeCheck" />
 
