--- a/app/src/main/res/layout/activity_admin_menu.xml
+++ b/app/src/main/res/layout/activity_admin_menu.xml
@@ -12,14 +12,18 @@
     android:paddingBottom="16dp"
     tools:context=".menu.AdminMenuActivity">
 
+
     <ImageButton
         android:id="@+id/imageButton_timetable"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:layout_marginTop="124dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="44dp"
+        android:layout_marginBottom="17dp"
         android:onClick="click_timetable"
+        app:layout_constraintBottom_toTopOf="@+id/textView_student"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:layout_constraintTop_toBottomOf="@+id/textView_admin"
         app:srcCompat="@drawable/calendar"
         tools:ignore="SpeakableTextPresentCheck" />
 
@@ -52,9 +56,8 @@
         android:layout_height="120dp"
         android:layout_marginTop="29dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginBottom="172dp"
         android:onClick="click_teachers"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView_main_concern"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView_student"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.895"
         app:layout_constraintStart_toEndOf="@+id/imageView_student"
@@ -81,12 +84,13 @@
         android:layout_width="182dp"
         android:layout_height="166dp"
         android:layout_marginStart="73dp"
-        android:layout_marginTop="100dp"
-        android:layout_marginEnd="4dp"
+        android:layout_marginTop="27dp"
+        android:layout_marginEnd="10dp"
         android:onClick="click_private"
+        app:layout_constraintBottom_toBottomOf="@+id/imageButton_timetable"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageButton_timetable"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:layout_constraintTop_toBottomOf="@+id/textView_admin"
         app:srcCompat="@drawable/personal"
         tools:ignore="SpeakableTextPresentCheck" />
 
@@ -120,39 +124,51 @@
         android:id="@+id/textView_timetable"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="34dp"
-        android:layout_marginBottom="120dp"
+        android:layout_marginStart="25dp"
         android:fontFamily="sans-serif-black"
         android:text="Timetable"
         android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageButton_timetable"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintBottom_toTopOf="@+id/imageButton_timetable"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView_private"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="131dp"
-        android:layout_marginTop="34dp"
-        android:layout_marginBottom="129dp"
+        android:layout_marginEnd="28dp"
+        android:layout_marginBottom="132dp"
         android:fontFamily="sans-serif-black"
         android:text="Private"
         android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView_private"
+        app:layout_constraintBottom_toTopOf="@+id/textView_teachers"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/textView_timetable"
-        app:layout_constraintVertical_bias="0.375" />
+        app:layout_constraintHorizontal_bias="0.835"
+        app:layout_constraintStart_toEndOf="@+id/textView_timetable" />
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="377dp"
         android:layout_height="127dp"
+        android:layout_marginBottom="17dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView_admin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/neve_golan" />
+
+    <TextView
+        android:id="@+id/textView_admin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="120dp"
+        android:layout_marginTop="17dp"
+        android:layout_marginEnd="161dp"
+        android:fontFamily="cursive"
+        android:text="Admin"
+        android:textSize="48sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
