calende need to fix update

--- a/app/src/main/res/layout/recycleritem_activity.xml
+++ b/app/src/main/res/layout/recycleritem_activity.xml
@@ -103,4 +103,17 @@
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="MissingConstraints" />
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="95dp"
+        android:layout_height="35dp"
+        android:onClick="ClickToRemove"
+        android:text="ערוך"
+        android:textSize="10sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.671"
+        app:layout_constraintStart_toEndOf="@+id/textView_activity_time_start"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
