--- a/app/src/main/res/layout/activity_calendar_view.xml
+++ b/app/src/main/res/layout/activity_calendar_view.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_main"
+    android:onClick="ClickToRemove"
     tools:context=".calendar.CalendarViewActivity">
 
 
@@ -25,6 +26,7 @@
         android:layout_width="414dp"
         android:layout_height="443dp"
         android:layout_marginTop="341dp"
+        android:onClick="ClickToRemove"
         app:layout_constraintEnd_toEndOf="@+id/button2"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +37,7 @@
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="עריכת פעילויות היום"
+        android:text="הוספת פעילויות יום"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
