--- a/app/src/main/res/layout/activity_edit_day_activities.xml
+++ b/app/src/main/res/layout/activity_edit_day_activities.xml
@@ -7,100 +7,44 @@
     android:background="@drawable/background_main"
     tools:context=".calendar.EditDayActivities">
 
-    <Button
-        android:id="@+id/buttonDelete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="בטל"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.64"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/DeleteActivityName" />
-
-    <EditText
-        android:id="@+id/DeleteActivityName"
-        android:layout_width="250dp"
-        android:layout_height="42dp"
-        android:ems="10"
-        android:hint="שם הפעילות :"
-        android:inputType="textPersonName"
-        android:textAlignment="viewEnd"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.863"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5"
-        app:layout_constraintVertical_bias="0.091" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="125dp"
-        android:layout_height="34dp"
-        android:text="ביטול פעילות :"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.916"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonAdd"
-        app:layout_constraintVertical_bias="0.257" />
-
     <TextView
         android:id="@+id/textView3"
         android:layout_width="217dp"
         android:layout_height="36dp"
-        android:text=" עריכת פעילויות היום"
+        android:text="הוספת פעילות"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.082" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="116dp"
-        android:layout_height="32dp"
-        android:text="הוספת פעילות :"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.915"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
-        app:layout_constraintVertical_bias="0.095" />
+        app:layout_constraintVertical_bias="0.107" />
 
     <EditText
         android:id="@+id/AddActivityName"
-        android:layout_width="250dp"
-        android:layout_height="42dp"
-        android:layout_marginTop="24dp"
+        android:layout_width="253dp"
+        android:layout_height="38dp"
+        android:layout_marginTop="108dp"
         android:ems="10"
         android:hint="שם הפעילות :"
         android:inputType="textPersonName"
         android:textAlignment="viewEnd"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.844"
+        app:layout_constraintHorizontal_bias="0.848"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <EditText
         android:id="@+id/AddTimeStart"
         android:layout_width="109dp"
         android:layout_height="37dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="52dp"
         android:layout_marginEnd="24dp"
         android:ems="10"
-        android:hint="משעה :"
+        android:hint="משעה : xx:yy"
         android:inputType="textPersonName"
         android:textAlignment="viewEnd"
         android:textSize="16sp"
@@ -111,15 +55,15 @@
         android:id="@+id/AddTimeEnd"
         android:layout_width="119dp"
         android:layout_height="37dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="52dp"
         android:layout_marginEnd="20dp"
         android:ems="10"
-        android:hint="עד:"
+        android:hint="עד: xx:yy"
         android:inputType="textPersonName"
         android:textAlignment="viewEnd"
         android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@+id/AddTimeStart"
-        app:layout_constraintHorizontal_bias="0.978"
+        app:layout_constraintHorizontal_bias="0.964"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/AddActivityName" />
 
@@ -127,7 +71,7 @@
         android:id="@+id/buttonAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="60dp"
         android:text="הוסף"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.64"
